Import of BOBTFISH/Catalyst-View-TT-0.33.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-View-TT
gitpan-cpan-version:      0.33
gitpan-cpan-path:         BOBTFISH/Catalyst-View-TT-0.33.tar.gz
gitpan-cpan-author:       BOBTFISH
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -23,6 +23,7 @@ SYNOPSIS
                 # Not set by default
                 PRE_PROCESS        => 'config/main',
                 WRAPPER            => 'site/wrapper',
+                render_die => 1, # Default for new apps, see render method docs
             },
         );
 
@@ -290,8 +291,8 @@ DESCRIPTION
     N.B. This is usually done automatically by Catalyst::Action::RenderView.
 
   render($c, $template, \%args)
-    Renders the given template and returns output, or a Template::Exception
-    object upon error.
+    Renders the given template and returns output. Throws a
+    Template::Exception object upon error.
 
     The template variables are set to %$args if $args is a hashref, or
     $"$c->stash" otherwise. In either case the variables are augmented with
@@ -312,6 +313,21 @@ DESCRIPTION
     Catalyst to render page fragments like this:
 
         my $fragment = $c->forward("View::TT", "render", $template_name, $c->stash->{fragment_data});
+
+   Backwards compatibility note
+    The render method used to just return the Template::Exception object,
+    rather than just throwing it. This is now deprecated and instead the
+    render method will throw an exception for new applications.
+
+    This behaviour can be activated (and is activated in the default
+    skeleton configuration) by using "render_die => 1". If you rely on the
+    legacy behaviour then a warning will be issued.
+
+    To silence this warning, set "render_die => 0", but it is recommended
+    you adjust your code so that it works with "render_die => 1".
+
+    In a future release, "render_die => 1" will become the default if
+    unspecified.
 
   template_vars
     Returns a list of keys/values to be used as the catalyst variables in
