--- a/README
+++ b/README
@@ -4,28 +4,24 @@ NAME
 SYNOPSIS
     # use the helper to create your View
 
-        myapp_create.pl view TT TT
+        myapp_create.pl view Web TT
 
-    # configure in lib/MyApp.pm (Could be set from configfile instead)
+    # add custom configration in View/Web.pm
 
         __PACKAGE__->config(
-            name         => 'MyApp',
-            root         => MyApp->path_to('root'),
-            default_view => 'TT',
-            'View::TT' => {
-                # any TT configurations items go here
-                INCLUDE_PATH => [
-                  MyApp->path_to( 'root', 'src' ),
-                  MyApp->path_to( 'root', 'lib' ),
-                ],
-                TEMPLATE_EXTENSION => '.tt',
-                CATALYST_VAR => 'c',
-                TIMER        => 0,
-                # Not set by default
-                PRE_PROCESS        => 'config/main',
-                WRAPPER            => 'site/wrapper',
-                render_die => 1, # Default for new apps, see render method docs
-            },
+            # any TT configuration items go here
+            INCLUDE_PATH => [
+              MyApp->path_to( 'root', 'src' ),
+              MyApp->path_to( 'root', 'lib' ),
+            ],
+            TEMPLATE_EXTENSION => '.tt',
+            CATALYST_VAR => 'c',
+            TIMER        => 0,
+            # Not set by default
+            PRE_PROCESS        => 'config/main',
+            WRAPPER            => 'site/wrapper',
+            render_die => 1, # Default for new apps, see render method docs
+            expose_methods => [qw/method_in_view_class/],
         );
 
     # render view from lib/MyApp.pm or
@@ -35,7 +31,7 @@ SYNOPSIS
             my ( $self, $c ) = @_;
             $c->stash->{template} = 'message.tt2';
             $c->stash->{message}  = 'Hello World!';
-            $c->forward( $c->view('TT') );
+            $c->forward( $c->view('Web') );
         }
 
     # access variables from template
@@ -55,17 +51,20 @@ SYNOPSIS
 DESCRIPTION
     This is the Catalyst view class for the Template Toolkit. Your
     application should defined a view class which is a subclass of this
-    module. The easiest way to achieve this is using the myapp_create.pl
-    script (where myapp should be replaced with whatever your application is
-    called). This script is created as part of the Catalyst setup.
+    module. Throughout this manual it will be assumed that your application
+    is named MyApp and you are creating a TT view named Web; these names are
+    placeholders and should always be replaced with whatever name you've
+    chosen for your application and your view. The easiest way to create a
+    TT view class is through the myapp_create.pl script that is created
+    along with the application:
 
-        $ script/myapp_create.pl view TT TT
+        $ script/myapp_create.pl view Web TT
 
-    This creates a MyApp::View::TT.pm module in the lib directory (again,
+    This creates a MyApp::View::Web.pm module in the lib directory (again,
     replacing "MyApp" with the name of your application) which looks
     something like this:
 
-        package FooBar::View::TT;
+        package FooBar::View::Web;
 
         use strict;
         use warnings;
@@ -83,7 +82,7 @@ DESCRIPTION
 
         sub end : Private {
             my( $self, $c ) = @_;
-            $c->forward( $c->view('TT') );
+            $c->forward( $c->view('Web') );
         }
 
     But if you are using the standard auto-generated end action, you don't
@@ -95,7 +94,7 @@ DESCRIPTION
         # in MyApp.pm
         __PACKAGE__->config(
             ...
-            default_view => 'TT',
+            default_view => 'Web',
         );
 
     This will Just Work. And it has the advantages that:
@@ -105,8 +104,8 @@ DESCRIPTION
         details.
 
     *   << $c->res->redirect >> is handled by default. If you just forward
-        to "View::TT" in your "end" routine, you could break this by sending
-        additional content.
+        to "View::Web" in your "end" routine, you could break this by
+        sending additional content.
 
     See Catalyst::Action::RenderView for more details.
 
@@ -115,12 +114,12 @@ DESCRIPTION
     way is to call the "config()" method in the view subclass. This happens
     when the module is first loaded.
 
-        package MyApp::View::TT;
+        package MyApp::View::Web;
 
         use strict;
         use base 'Catalyst::View::TT';
 
-        MyApp::View::TT->config({
+        __PACKAGE__->config({
             INCLUDE_PATH => [
                 MyApp->path_to( 'root', 'templates', 'lib' ),
                 MyApp->path_to( 'root', 'templates', 'src' ),
@@ -129,53 +128,21 @@ DESCRIPTION
             WRAPPER      => 'site/wrapper',
         });
 
-    The second way is to define a "new()" method in your view subclass. This
-    performs the configuration when the view object is created, shortly
-    after being loaded. Remember to delegate to the base class "new()"
-    method (via "$self->next::method()" in the example below) after
-    performing any configuration.
+    You may also override the configuration provided in the view class by
+    adding a 'View::Web' section to your application config (either in the
+    application main class, or in your configuration file). This should be
+    reserved for deployment-specific concerns. For example:
 
-        sub new {
-            my $self = shift;
-            $self->config({
-                INCLUDE_PATH => [
-                    MyApp->path_to( 'root', 'templates', 'lib' ),
-                    MyApp->path_to( 'root', 'templates', 'src' ),
-                ],
-                PRE_PROCESS  => 'config/main',
-                WRAPPER      => 'site/wrapper',
-            });
-            return $self->next::method(@_);
-        }
+        # MyApp_local.conf (Config::General format)
 
-    The final, and perhaps most direct way, is to define a class item in
-    your main application configuration, again by calling the ubiquitous
-    "config()" method. The items in the class hash are added to those
-    already defined by the above two methods. This happens in the base class
-    new() method (which is one reason why you must remember to call it via
-    "MRO::Compat" if you redefine the "new()" method in a subclass).
+        <View Web>
+          WRAPPER "custom_wrapper"
+          INCLUDE_PATH __path_to('root/templates/custom_site')__
+          INCLUDE_PATH __path_to('root/templates')__
+        </View>
 
-        package MyApp;
-
-        use strict;
-        use Catalyst;
-
-        MyApp->config({
-            name     => 'MyApp',
-            root     => MyApp->path_to('root'),
-            'View::TT' => {
-                INCLUDE_PATH => [
-                    MyApp->path_to( 'root', 'templates', 'lib' ),
-                    MyApp->path_to( 'root', 'templates', 'src' ),
-                ],
-                PRE_PROCESS  => 'config/main',
-                WRAPPER      => 'site/wrapper',
-            },
-        });
-
-    Note that any configuration items defined by one of the earlier methods
-    will be overwritten by items of the same name provided by the latter
-    methods.
+    might be used as part of a simple way to deploy different instances of
+    the same application with different themes.
 
   DYNAMIC INCLUDE_PATH
     Sometimes it is desirable to modify INCLUDE_PATH for your templates at
@@ -190,7 +157,7 @@ DESCRIPTION
     If you need to add paths to the end of INCLUDE_PATH, there is also an
     include_path() accessor available:
 
-        push( @{ $c->view('TT')->include_path }, qw/path/ );
+        push( @{ $c->view('Web')->include_path }, qw/path/ );
 
     Note that if you use include_path() to add extra paths to INCLUDE_PATH,
     you MUST check for duplicate paths. Without such checking, the above
@@ -201,7 +168,7 @@ DESCRIPTION
     paths rather than adding to it. This eliminates both the need to perform
     duplicate checking and the chance of a memory leak:
 
-        @{ $c->view('TT')->include_path } = qw/path another_path/;
+        @{ $c->view('Web')->include_path } = qw/path another_path/;
 
     If you are calling "render" directly then you can specify dynamic paths
     by having a "additional_template_paths" key with a value of additonal
@@ -215,7 +182,7 @@ DESCRIPTION
         sub message : Global {
             my ( $self, $c ) = @_;
             $c->stash->{template} = 'message.tt2';
-            $c->forward( $c->view('TT') );
+            $c->forward( $c->view('Web') );
         }
 
     If a stash item isn't defined, then it instead uses the stringification
@@ -230,7 +197,7 @@ DESCRIPTION
             my ( $self, $c ) = @_;
             $c->stash->{template} = 'message.tt2';
             $c->stash->{message}  = 'Hello World!';
-            $c->forward( $c->view('TT') );
+            $c->forward( $c->view('Web') );
         }
 
     A number of other template variables are also added:
@@ -262,7 +229,7 @@ DESCRIPTION
             To      => 'me@localhost',
             Subject => 'A TT Email',
           ],
-          body => $c->view('TT')->render($c, 'email.tt', {
+          body => $c->view('Web')->render($c, 'email.tt', {
             additional_template_paths => [ $c->config->{root} . '/email_templates'],
             email_tmpl_param1 => 'foo'
             }
@@ -287,7 +254,7 @@ DESCRIPTION
     It is possible to forward to the process method of a TT view from inside
     Catalyst like this:
 
-        $c->forward('View::TT');
+        $c->forward('View::Web');
 
     N.B. This is usually done automatically by Catalyst::Action::RenderView.
 
@@ -296,12 +263,12 @@ DESCRIPTION
     Template::Exception object upon error.
 
     The template variables are set to %$args if $args is a hashref, or
-    $"$c->stash" otherwise. In either case the variables are augmented with
-    "base" set to " << $c-"req->base >>, "c" to $c and "name" to
+    "$c->stash" otherwise. In either case the variables are augmented with
+    "base" set to "$c->req->base", "c" to $c, and "name" to
     "$c->config->{name}". Alternately, the "CATALYST_VAR" configuration item
     can be defined to specify the name of a template variable through which
     the context reference ($c) can be accessed. In this case, the "c",
-    "base" and "name" variables are omitted.
+    "base", and "name" variables are omitted.
 
     $template can be anything that Template::process understands how to
     process, including the name of a template file or a reference to a test
@@ -313,7 +280,7 @@ DESCRIPTION
     It is possible to forward to the render method of a TT view from inside
     Catalyst to render page fragments like this:
 
-        my $fragment = $c->forward("View::TT", "render", $template_name, $c->stash->{fragment_data});
+        my $fragment = $c->forward("View::Web", "render", $template_name, $c->stash->{fragment_data});
 
    Backwards compatibility note
     The render method used to just return the Template::Exception object,
@@ -341,22 +308,35 @@ DESCRIPTION
   paths
     The list of paths TT will look for templates in.
 
+  expose_methods
+    The list of methods in your View class which should be made available to
+    the templates.
+
+    For example:
+
+      expose_methods => [qw/uri_for_static/],
+
+      ...
+
+      sub uri_for_css {
+        my ($self, $c, $filename) = @_;
+
+        # additional complexity like checking file exists here
+
+        return $c->uri_for('/static/css/' . $filename);
+      }
+
+    Then in the template:
+
+      [% uri_for_css('home.css') %]
+
   "CATALYST_VAR"
     Allows you to change the name of the Catalyst context object. If set, it
     will also remove the base and name aliases, so you will have access them
     through <context>.
 
-    For example:
-
-        MyApp->config({
-            name     => 'MyApp',
-            root     => MyApp->path_to('root'),
-            'View::TT' => {
-                CATALYST_VAR => 'Catalyst',
-            },
-        });
-
-    message.tt2:
+    For example, if CATALYST_VAR has been set to "Catalyst", a template
+    might contain:
 
         The base is [% Catalyst.req.base %]
         The name is [% Catalyst.config.name %]
@@ -395,7 +375,7 @@ DESCRIPTION
         MyApp->config({
             name     => 'MyApp',
             root     => MyApp->path_to('root'),
-            'View::TT' => {
+            'View::Web' => {
                 PROVIDERS => [
                     {
                         name    => 'DBI',
@@ -439,9 +419,9 @@ DESCRIPTION
     modules are provided to create your view module. There are invoked by
     the myapp_create.pl script:
 
-        $ script/myapp_create.pl view TT TT
+        $ script/myapp_create.pl view Web TT
 
-        $ script/myapp_create.pl view TT TTSite
+        $ script/myapp_create.pl view Web TTSite
 
     The Catalyst::Helper::View::TT module creates a basic TT view module.
     The Catalyst::Helper::View::TTSite module goes a little further. It also
@@ -469,6 +449,8 @@ AUTHORS
     Jesse Sheidlower, "jester@panix.com"
 
     Andy Wardley, "abw@cpan.org"
+
+    Luke Saunders, "luke.saunders@gmail.com"
 
 COPYRIGHT
     This program is free software. You can redistribute it and/or modify it
