Import of BOBTFISH/Catalyst-View-TT-0.35.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-View-TT
gitpan-cpan-version:      0.35
gitpan-cpan-path:         BOBTFISH/Catalyst-View-TT-0.35.tar.gz
gitpan-cpan-author:       BOBTFISH
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -314,7 +314,7 @@ DESCRIPTION
 
     For example:
 
-      expose_methods => [qw/uri_for_static/],
+      expose_methods => [qw/uri_for_css/],
 
       ...
 
