--- a/README
+++ b/README
@@ -10,18 +10,26 @@ SYNOPSIS
 
         __PACKAGE__->config(
             # any TT configuration items go here
-            INCLUDE_PATH => [
-              MyApp->path_to( 'root', 'src' ),
-              MyApp->path_to( 'root', 'lib' ),
-            ],
             TEMPLATE_EXTENSION => '.tt',
             CATALYST_VAR => 'c',
             TIMER        => 0,
+            ENCODING     => 'utf-8'
             # Not set by default
             PRE_PROCESS        => 'config/main',
             WRAPPER            => 'site/wrapper',
             render_die => 1, # Default for new apps, see render method docs
             expose_methods => [qw/method_in_view_class/],
+        );
+
+    # add include path configuration in MyApp.pm
+
+        __PACKAGE__->config(
+            'View::Web' => {
+                INCLUDE_PATH => [
+                    __PACKAGE__->path_to( 'root', 'src' ),
+                    __PACKAGE__->path_to( 'root', 'lib' ),
+                ],
+            },
         );
 
     # render view from lib/MyApp.pm or
@@ -65,11 +73,9 @@ DESCRIPTION
     something like this:
 
         package FooBar::View::Web;
+        use Moose;
 
-        use strict;
-        use warnings;
-
-        use base 'Catalyst::View::TT';
+        extends 'Catalyst::View::TT';
 
         __PACKAGE__->config(DEBUG => 'all');
 
@@ -115,23 +121,33 @@ DESCRIPTION
     when the module is first loaded.
 
         package MyApp::View::Web;
-
-        use strict;
-        use base 'Catalyst::View::TT';
+        use Moose;
+        extends 'Catalyst::View::TT';
 
         __PACKAGE__->config({
-            INCLUDE_PATH => [
-                MyApp->path_to( 'root', 'templates', 'lib' ),
-                MyApp->path_to( 'root', 'templates', 'src' ),
-            ],
             PRE_PROCESS  => 'config/main',
             WRAPPER      => 'site/wrapper',
         });
 
     You may also override the configuration provided in the view class by
-    adding a 'View::Web' section to your application config (either in the
-    application main class, or in your configuration file). This should be
-    reserved for deployment-specific concerns. For example:
+    adding a 'View::Web' section to your application config.
+
+    This should generally be used to inject the include paths into the view
+    to avoid the view trying to load the application to resolve paths.
+
+        .. inside MyApp.pm ..
+        __PACKAGE__->config(
+            'View::Web' => {
+                INCLUDE_PATH => [
+                    __PACKAGE__->path_to( 'root', 'templates', 'lib' ),
+                    __PACKAGE__->path_to( 'root', 'templates', 'src' ),
+                ],
+            },
+        );
+
+    You can also configure your view from within your config file if you're
+    using Catalyst::Plugin::ConfigLoader. This should be reserved for
+    deployment-specific concerns. For example:
 
         # MyApp_local.conf (Config::General format)
 
@@ -174,6 +190,11 @@ DESCRIPTION
     by having a "additional_template_paths" key with a value of additonal
     directories to search. See "CAPTURING TEMPLATE OUTPUT" for an example
     showing this.
+
+  Unicode
+    Be sure to set "ENCODING => 'utf-8'" and use
+    Catalyst::Plugin::Unicode::Encoding if you want to use non-ascii
+    characters (encoded as utf-8) in your templates.
 
   RENDERING VIEWS
     The view plugin renders the template specified in the "template" item in
@@ -372,7 +393,7 @@ DESCRIPTION
   "PROVIDERS"
     Allows you to specify the template providers that TT will use.
 
-        MyApp->config({
+        MyApp->config(
             name     => 'MyApp',
             root     => MyApp->path_to('root'),
             'View::Web' => {
@@ -389,7 +410,7 @@ DESCRIPTION
                     }
                 ]
             },
-        });
+        );
 
     The 'name' key should correspond to the class name of the provider you
     want to use. The _file_ name is a special case that represents the
@@ -419,9 +440,8 @@ DESCRIPTION
     instead of Template.
 
         package MyApp::View::Web;
-
-        use strict;
-        use base 'Catalyst::View::TT';
+        use Moose;
+        extends 'Catalyst::View::TT';
 
         use Template::AutoFilter;
 
